# PPlay

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/pwjworks/pplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FFDecode.cpp  FFDecode.h  FFDemux.cpp  FFDemux.h  GLVideoView.cpp  GLVideoView.h  IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IObserver.cpp  IObserver.h  IVideoView.cpp  IVideoView.h  XData.cpp  XData.h  XEGL.cpp  XEGL.h  XLog.cpp  XLog.h  XParameter.cpp  XParameter.h  XShader.cpp  XShader.h  XTexture.cpp  XTexture.h  XThread.cpp  XThread.h  native-lib.cpp
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/com/pwjworks/pplayer/: MainActivity.java  PPlay.java  Utils.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/pwjworks/pplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
